--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Tailwind App Sample",
-  "name": "Create Easy Frontend Tailwind App Sample",
+  "short_name": "Smart City",
+  "name": "Citizen link",
   "icons": [
     {
       "src": "favicon.ico",
